Minor alignment fixes. Centered card header texts

--- a/client/src/style.css
+++ b/client/src/style.css
@@ -1,7 +1,3 @@
-html {
-    height: 100%;
-}
-
 body {
     font-family: 'Oxygen', sans-serif;
     height: 100%;
@@ -12,13 +8,11 @@ body {
 }
 
 .container {
-    /* background-color: #eeeeee; */
     margin: auto auto;
     padding: 0;
 }
 
 .titleHeader {
-    /* color: #444444; */
     font-size: 4em;
     margin-top: 30px;
     margin-bottom: 60px;
@@ -31,7 +25,6 @@ body {
     align-items: center;
     margin: 0 auto;
     transition: all 1s linear;
-    /* background-color: aqua; */
 }
 
 .searchBarDiv form {
@@ -74,8 +67,6 @@ body {
     overflow: auto;
     white-space: nowrap;
     padding: 20px 0px;
-    /* border: #CED4DA solid 1px; */
-    /* border-radius: 5px; */
 }
 .row {
     margin-bottom: 30px;
@@ -116,4 +107,8 @@ body {
     width: 100%;
     margin: 0px;
     padding: auto auto;
+}
+
+.card-header {
+    text-align: center;;
 }
